--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@
 .move {
     position: absolute;
     z-index: 9;
+    background: rgba( 255, 255, 255, 0.2 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 9px );
+    -webkit-backdrop-filter: blur( 9px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .movehead {
@@ -46,8 +52,8 @@
 
 * {
     font-size: inherit;
-    background-color: inherit;
-    color: inherit;
+    background-color: #00000000;
+    color: white;
 }
 
 #taskbar {
